--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-dev-middleware": "^3.1.3"
   },
