--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "",
+    "test": "jest",
     "start": "babel-node buildScripts/server.js"
   },
   "author": "",
@@ -20,8 +20,13 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "enzyme": "^3.4.1",
+    "jest": "^23.4.2",
+    "jsdom": "11.11.0",
+    "react-test-renderer": "^16.4.2",
     "webpack": "^4.16.5",
     "webpack-dev-middleware": "^3.1.3"
   },
