--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "test": "jest",
     "start": "babel-node buildScripts/server.js"
   },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
     "path": "^0.12.7",
     "react": "^16.4.2",
