--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "jest": "^23.4.2",
     "webpack": "^4.16.5",
     "webpack-dev-middleware": "^3.1.3"
   },
