--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "express": "^4.16.3",
